@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-26T01:53:49Z",
+  "timestamp" : "2025-07-26T12:43:31Z",
   "count_outdated" : 9259,
   "uniques_outdated" : 4455,
-  "count" : 9330,
-  "uniques" : 4510,
+  "count" : 9331,
+  "uniques" : 4511,
   "clones" : [
     {
       "timestamp": "2025-07-12T00:00:00Z",
-      "count": 7,
+      "count": 5,
       "count_minmax": [ 1, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 6,
+      "count_decinc": [ 2, 7 ],
+      "uniques": 4,
       "uniques_minmax": [ 1, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "uniques_decinc": [ 2, 6 ]
     },
     {
       "timestamp": "2025-07-13T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
